--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "private": null,
   "dependencies": {
     "express": "^4.16.4",
-    "http": "^0.0.0"
+    "http": "^0.0.0",
+    "socket.io": "^2.2.0"
   },
   "scripts": {
     "test": "node main.js"
