--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "GPL-3.0",
   "private": null,
   "dependencies": {
+    "colors": "^1.3.3",
     "express": "^4.16.4",
     "http": "^0.0.0",
     "socket.io": "^2.2.0"
