--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "colors": "^1.3.3",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "http": "^0.0.0",
+    "pug": "^2.0.3",
     "socket.io": "^2.2.0"
   },
   "scripts": {
