--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "socket.io": "^2.2.0"
   },
   "scripts": {
-    "test": "node main.js"
+    "test": "node main.js",
+    "start": "node main.js"
   }
 }
