--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "colors": "^1.3.3",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.4",
+    "express-error-handler": "^1.1.0",
     "express-session": "^1.15.6",
     "http": "^0.0.0",
     "pug": "^2.0.3",
