--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-error-handler": "^1.1.0",
     "express-session": "^1.15.6",
     "http": "^0.0.0",
+    "path": "^0.12.7",
     "pug": "^2.0.3",
     "socket.io": "^2.2.0"
   },
