--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "GPL-3.0",
   "private": null,
   "dependencies": {
+    "body-parser": "^1.18.3",
     "colors": "^1.3.3",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.4",
