--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "repository": "git@github.com:5tarlight/starproject.git",
   "author": "5tarlight <developerstarlight@gmail.com>",
   "license": "GPL-3.0",
-  "private": null,
+  "private": false,
   "dependencies": {
     "body-parser": "^1.18.3",
     "colors": "^1.3.3",
