--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "express-error-handler": "^1.1.0",
     "express-session": "^1.15.6",
     "http": "^0.0.0",
+    "passport": "^0.4.0",
+    "passport-facebook": "^3.0.0",
+    "passport-github": "^1.1.0",
+    "passport-google-oauth": "^1.0.0",
     "path": "^0.12.7",
     "pug": "^2.0.3",
     "socket.io": "^2.2.0"
